--- a/scss/style1.css
+++ b/scss/style1.css
@@ -1,17 +1,11 @@
-html {
+/* html {
   scroll-behavior: smooth;
 }
 
 .nav-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .nav-list {
@@ -24,18 +18,57 @@ html {
 }
 
 .nav-link {
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .section-item a {
   color: #829985;
   text-decoration: none;
-  -webkit-transition: color 0.5s;
   transition: color 0.5s;
 }
-
 .section-item a:hover {
   color: #4d2323;
+} */
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Bebas Neue", cursive;
+  font-family: "Poppins", sans-serif;
+}
+
+.wrapper {
+  background-color: #f5f5f5;
+}
+
+.center {
+  max-width: 1070px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: #505050;
+}
+
+.header .nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 25px 0;
+}
+
+.header .nav-list .nav-item .nav-link {
+  font-family: "Bebas Neue", cursive;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: 4px;
+  font-weight: normal;
 }
 /*# sourceMappingURL=style1.css.map */
