--- a/scss/style1.scss
+++ b/scss/style1.scss
@@ -1,4 +1,4 @@
-html {
+/* html {
   scroll-behavior: smooth;
 }
 
@@ -28,4 +28,43 @@ html {
 }
 .section-item a:hover {
   color: #4d2323;
+} */
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Bebas Neue", cursive;
+  font-family: "Poppins", sans-serif;
+}
+
+.wrapper {
+  background-color: #f5f5f5;
+}
+
+.center {
+  max-width: 1070px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: #505050;
+  .nav-list {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 0;
+    .nav-item {
+      .nav-link {
+        font-family: "Bebas Neue", cursive;
+        text-decoration: none;
+        color: #ffffff;
+        font-size: 18px;
+        line-height: 20px;
+        letter-spacing: 4px;
+        font-weight: normal;
+      }
+    }
+  }
 }
