--- a/scss/style1.css
+++ b/scss/style1.css
@@ -71,4 +71,52 @@ body {
   letter-spacing: 4px;
   font-weight: normal;
 }
+
+.header .nav-list .nav-item .nav-link:hover {
+  color: #ffd6d2;
+}
+
+.main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main .aside {
+  width: 40%;
+  text-align: center;
+  color: #505050;
+}
+
+.main .aside img {
+  margin: 20px 0;
+  width: 200px;
+  height: 200px;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border: 15px solid #ffd6d2;
+  border-radius: 50%;
+}
+
+.main .aside .name {
+  font-family: "Bebas Neue", cursive;
+  font-size: 55px;
+  line-height: 65px;
+  letter-spacing: 7px;
+  font-weight: 500;
+}
+
+.main .aside .devel {
+  margin-top: 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  line-height: 40px;
+}
+
+.main div {
+  width: 60%;
+}
 /*# sourceMappingURL=style1.css.map */
