--- a/scss/style1.css
+++ b/scss/style1.css
@@ -101,8 +101,8 @@ body {
 
 .main .aside .name {
   font-family: "Bebas Neue", cursive;
-  font-size: 55px;
-  line-height: 65px;
+  font-size: 45px;
+  line-height: 55px;
   letter-spacing: 7px;
   font-weight: 500;
 }
@@ -116,7 +116,48 @@ body {
   line-height: 40px;
 }
 
-.main div {
+.main .aside .basic-info {
+  background-color: #ffd6d2;
+  margin-top: 60px;
+  padding-top: 50px;
+  padding-left: 25px;
+  position: relative;
+}
+
+.main .aside .basic-info .title {
+  font-family: "Bebas Neue", cursive;
+  color: #ffffff;
+  padding: 5px 15px;
+  background-color: #505050;
+  width: 100px;
+  margin: 0 auto;
+  font-size: 24px;
+  letter-spacing: 3px;
+  line-height: 36px;
+  position: absolute;
+  right: 153px;
+  top: -22px;
+}
+
+.main .aside .basic-info .contacts li {
+  text-align: start;
+  margin-bottom: 10px;
+}
+
+.main .aside .basic-info .contacts li a {
+  text-decoration: none;
+  color: #505050;
+  font-size: 35px;
+}
+
+.main .aside .basic-info .contacts li a span {
+  margin-left: 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+.main .right-content {
   width: 60%;
 }
 /*# sourceMappingURL=style1.css.map */
