--- a/scss/style1.css
+++ b/scss/style1.css
@@ -119,9 +119,7 @@ body {
 .main .aside .basic-info {
   background-color: #ffd6d2;
   margin-top: 60px;
-  padding-top: 50px;
   padding-left: 25px;
-  position: relative;
 }
 
 .main .aside .basic-info .title {
@@ -129,14 +127,15 @@ body {
   color: #ffffff;
   padding: 5px 15px;
   background-color: #505050;
-  width: 100px;
+  width: 120px;
   margin: 0 auto;
   font-size: 24px;
   letter-spacing: 3px;
   line-height: 36px;
-  position: absolute;
-  right: 153px;
-  top: -22px;
+}
+
+.main .aside .basic-info .contacts {
+  margin-bottom: 30px;
 }
 
 .main .aside .basic-info .contacts li {
@@ -155,6 +154,32 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 20px;
   vertical-align: middle;
+}
+
+.main .aside .basic-info .list {
+  list-style: inside;
+  text-align: start;
+  margin: 20px 0 30px 0;
+}
+
+.main .aside .basic-info .list li {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.main .aside .basic-info .list .lang {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.main .aside .basic-info .list .lang p {
+  text-transform: none;
+  font-weight: normal;
+  font-size: 18px;
+  margin-left: 2rem;
+  margin-top: 5px;
 }
 
 .main .right-content {
