--- a/scss/style1.css
+++ b/scss/style1.css
@@ -184,5 +184,49 @@ body {
 
 .main .right-content {
   width: 60%;
+  margin-top: 20px;
+  padding-left: 25px;
+  color: #777777;
+}
+
+.main .right-content .title-right {
+  font-family: "Bebas Neue", cursive;
+  font-size: 24px;
+  letter-spacing: 3px;
+  line-height: 36px;
+  color: #505050;
+  margin-top: 40px;
+}
+
+.main .right-content hr {
+  height: 2px;
+  margin-top: 0;
+}
+
+.main .right-content .description {
+  font-size: 20px;
+  line-height: 32px;
+}
+
+.main .right-content .description .descr-bold {
+  font-weight: bold;
+}
+
+.main .right-content .description .descr-italic {
+  font-weight: bold;
+  font-style: oblique;
+}
+
+.main .right-content .description a {
+  display: block;
+  text-decoration: none;
+}
+
+.main .right-content .list-descr {
+  list-style: inside;
+  text-align: start;
+  font-size: 18px;
+  line-height: 30px;
+  margin-left: 20px;
 }
 /*# sourceMappingURL=style1.css.map */
