--- a/scss/style1.scss
+++ b/scss/style1.scss
@@ -161,5 +161,42 @@ body {
   }
   .right-content {
     width: 60%;
+    margin-top: 20px;
+    padding-left: 25px;
+    color: #777777;
+    .title-right {
+      font-family: "Bebas Neue", cursive;
+      font-size: 24px;
+      letter-spacing: 3px;
+      line-height: 36px;
+      color: #505050;
+      margin-top: 40px;
+    }
+    hr {
+      height: 2px;
+      margin-top: 0;
+    }
+    .description {
+      font-size: 20px;
+      line-height: 32px;
+      .descr-bold {
+        font-weight: bold;
+      }
+      .descr-italic {
+        font-weight: bold;
+        font-style: oblique;
+      }
+      a {
+        display: block;
+        text-decoration: none;
+      }
+    }
+    .list-descr {
+      list-style: inside;
+      text-align: start;
+      font-size: 18px;
+      line-height: 30px;
+      margin-left: 20px;
+    }
   }
 }
