--- a/scss/style1.scss
+++ b/scss/style1.scss
@@ -74,8 +74,10 @@ body {
 
 .main {
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   .aside {
-    width: 40%;
+    width: 38%;
     text-align: center;
     color: #505050;
     img {
@@ -106,6 +108,7 @@ body {
       background-color: #ffd6d2;
       margin-top: 60px;
       padding-left: 25px;
+      height: 100%;
       .title {
         font-family: "Bebas Neue", cursive;
         color: #ffffff;
@@ -160,9 +163,8 @@ body {
     }
   }
   .right-content {
-    width: 60%;
+    width: 58%;
     margin-top: 20px;
-    padding-left: 25px;
     color: #777777;
     .title-right {
       font-family: "Bebas Neue", cursive;
@@ -197,6 +199,30 @@ body {
       font-size: 18px;
       line-height: 30px;
       margin-left: 20px;
+    }
+  }
+  .code {
+    width: 65%;
+    margin: 0 auto;
+    .title-code {
+      font-family: "Bebas Neue", cursive;
+      font-size: 24px;
+      letter-spacing: 3px;
+      line-height: 36px;
+      color: #505050;
+      margin-top: 40px;
+    }
+    hr {
+      height: 2px;
+      margin-top: 0;
+    }
+    pre {
+      background-color: #ffffff;
+      code {
+        color: #777777;
+        font-size: 20px;
+        line-height: 32px;
+      }
     }
   }
 }
