--- a/scss/style1.scss
+++ b/scss/style1.scss
@@ -49,7 +49,7 @@ body {
   margin: 0 auto;
 }
 
-.header {
+header {
   background-color: #505050;
   .nav-list {
     display: flex;
@@ -108,7 +108,7 @@ body {
       background-color: #ffd6d2;
       margin-top: 60px;
       padding-left: 25px;
-      height: 100%;
+      // height: 100%;
       .title {
         font-family: "Bebas Neue", cursive;
         color: #ffffff;
@@ -223,6 +223,35 @@ body {
         font-size: 20px;
         line-height: 32px;
       }
+    }
+  }
+}
+
+footer {
+  background-color: #505050;
+  .link-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+    .link-github {
+      color: #ffffff;
+      font-size: 50px;
+      text-decoration: none;
+    }
+    .year {
+      font-family: "Bebas Neue", cursive;
+      font-size: 30px;
+      letter-spacing: 3px;
+      color: #ffffff;
+    }
+    span {
+      font-family: "Bebas Neue", cursive;
+      font-size: 30px;
+      letter-spacing: 3px;
+      color: #ffffff;
+      vertical-align: middle;
+      margin-left: 20px;
     }
   }
 }
