--- a/scss/style1.css
+++ b/scss/style1.css
@@ -125,6 +125,7 @@ header .nav-list .nav-item .nav-link:hover {
   background-color: #ffd6d2;
   margin-top: 60px;
   padding-left: 25px;
+  height: 100%;
 }
 
 .main .aside .basic-info .title {
@@ -237,6 +238,7 @@ header .nav-list .nav-item .nav-link:hover {
 .main .code {
   width: 65%;
   margin: 0 auto;
+  margin-bottom: 47px;
 }
 
 .main .code .title-code {
