--- a/scss/style1.scss
+++ b/scss/style1.scss
@@ -108,7 +108,7 @@ header {
       background-color: #ffd6d2;
       margin-top: 60px;
       padding-left: 25px;
-      // height: 100%;
+      height: 100%;
       .title {
         font-family: "Bebas Neue", cursive;
         color: #ffffff;
@@ -204,6 +204,7 @@ header {
   .code {
     width: 65%;
     margin: 0 auto;
+    margin-bottom: 47px;
     .title-code {
       font-family: "Bebas Neue", cursive;
       font-size: 24px;
