--- a/scss/style1.css
+++ b/scss/style1.css
@@ -303,4 +303,153 @@ footer .link-footer span {
   vertical-align: middle;
   margin-left: 20px;
 }
+
+#burger {
+  display: none;
+  width: 30px;
+  height: 30px;
+  margin-top: 10px;
+  position: absolute;
+  right: 0;
+  top: 17%;
+}
+
+#burger i {
+  display: block;
+  width: 24px;
+  height: 3px;
+  margin: 3px;
+  background-color: #ffffff;
+}
+
+#close {
+  display: none;
+  position: fixed;
+  right: 5%;
+  top: 3%;
+  font-size: 32px;
+  color: #ffffff;
+  z-index: 2;
+  cursor: pointer;
+}
+
+/* Media */
+@media screen and (max-width: 1200px) {
+  .center {
+    width: 90%;
+  }
+  header .nav-list {
+    opacity: 0;
+    min-height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: fixed;
+    top: 0;
+    width: 112%;
+    left: -112%;
+    -webkit-transition: 1s ease-in-out;
+    transition: 1s ease-in-out;
+  }
+  header .show {
+    -webkit-transition: 1s ease-in-out;
+    transition: 1s ease-in-out;
+    opacity: 1;
+    left: -6%;
+    z-index: 1;
+  }
+  header .show .nav-item {
+    margin: 20px 0;
+  }
+  header .show .nav-item .nav-link {
+    font-size: 30px;
+  }
+  .nav {
+    position: relative;
+    height: 70px;
+  }
+  #burger {
+    display: block;
+  }
+  .main .aside .basic-info .contacts li a span {
+    font-size: 16px;
+  }
+  .main .aside .basic-info {
+    height: 97%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .main .aside,
+  .main .right-content,
+  .main .code {
+    width: 100%;
+  }
+  .main .aside .basic-info .contacts li a span {
+    font-size: 20px;
+  }
+  .main .aside .basic-info {
+    height: auto;
+    padding-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .main .aside .basic-info .contacts li a span {
+    font-size: 18px;
+  }
+  footer .link-footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  footer .link-footer .link-github {
+    margin-bottom: 30px;
+  }
+  footer .link-footer .year {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main .aside .basic-info .contacts li a span {
+    font-size: 15px;
+  }
+  .main .code pre code {
+    font-size: inherit;
+  }
+  .main .right-content {
+    text-align: justify;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .main .aside .basic-info .contacts li a span {
+    font-size: 13px;
+  }
+  .main .right-content .description,
+  .main .right-content .list-descr {
+    font-size: 16px;
+    line-height: 26px;
+  }
+  .main .code pre code {
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
 /*# sourceMappingURL=style1.css.map */
