--- a/scss/style1.scss
+++ b/scss/style1.scss
@@ -256,3 +256,156 @@ footer {
     }
   }
 }
+
+#burger {
+  display: none;
+  width: 30px;
+  height: 30px;
+  margin-top: 10px;
+  position: absolute;
+  right: 0;
+  top: 17%;
+  i {
+    display: block;
+    width: 24px;
+    height: 3px;
+    margin: 3px;
+    background-color: #ffffff;
+  }
+}
+
+#close {
+  display: none;
+  position: fixed;
+  right: 5%;
+  top: 3%;
+  font-size: 32px;
+  color: #ffffff;
+  z-index: 2;
+  cursor: pointer;
+}
+
+/* Media */
+
+@media screen and (max-width: 1200px) {
+  .center {
+    width: 90%;
+  }
+
+  header .nav-list {
+    opacity: 0;
+    min-height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    width: 112%;
+    left: -112%;
+    transition: 1s ease-in-out;
+  }
+
+  header .show {
+    transition: 1s ease-in-out;
+    opacity: 1;
+    left: -6%;
+    z-index: 1;
+  }
+
+  header .show .nav-item {
+    margin: 20px 0;
+  }
+
+  header .show .nav-item .nav-link {
+    font-size: 30px;
+  }
+
+  .nav {
+    position: relative;
+    height: 70px;
+  }
+
+  #burger {
+    display: block;
+  }
+
+  .main .aside .basic-info .contacts li a span {
+    font-size: 16px;
+  }
+
+  .main .aside .basic-info {
+    height: 97%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .main .aside,
+  .main .right-content,
+  .main .code {
+    width: 100%;
+  }
+
+  .main .aside .basic-info .contacts li a span {
+    font-size: 20px;
+  }
+
+  .main .aside .basic-info {
+    height: auto;
+    padding-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 600px) {
+  .main .aside .basic-info .contacts li a span {
+    font-size: 18px;
+  }
+
+  footer .link-footer {
+    flex-direction: column;
+  }
+
+  footer .link-footer .link-github {
+    margin-bottom: 30px;
+  }
+
+  footer .link-footer .year {
+    order: 1;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main .aside .basic-info .contacts li a span {
+    font-size: 15px;
+  }
+
+  .main .code pre code {
+    font-size: inherit;
+  }
+
+  .main .right-content {
+    text-align: justify;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .main .aside .basic-info .contacts li a span {
+    font-size: 13px;
+  }
+
+  .main .right-content .description,
+  .main .right-content .list-descr {
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  .main .code pre code {
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
